Adjust font sizes and correct wrapping problem

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    width: min(50rem, 90%);
+    width: min(45rem, 90%);
     min-height: 100vh;
     margin: auto;
     display: grid;
@@ -16,9 +16,12 @@ body {
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
-    font-size: 1.45rem;
+    font-size: 1.2rem;
     overflow-wrap: break-word;
-    display: block;
+}
+
+body > * {
+    min-width: 0;
 }
 
 :is(h1, h2, h3, h4, h5, h6) {
